--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,16 @@
+/*
+Author: Shannon Bennett
+Date: May 22, 2023
+File Name: styles.css
+*/
+
+/* CSS Reset */
+body, header, nav, main, footer, h1, div, img, h2, h4, grid, ul {
+	margin: 0;
+	padding: 0;
+	border: 0;
+}
+
 body {
 	background-color: #fff;
 }
@@ -7,45 +20,80 @@ img {
 	display: block;
 }
 
+/*Style rules for mobile viewport*/
+
+/*Style rules for header*/
 header {
-	float: left;
-	width: 25%;
+	position: -webkit-sticky;
+	position: sticky;
+	top: 0;
+	background-color: #fff;
+	height: 190px;
 }
 
+header img {
+	margin: 0 auto;
+	height: 190px;
+}
+
+/*Style rules for navigation area*/
 nav {
-	width: 70%;
-	float: right;
-	margin: 5em 3em 0 0;
+	padding: 1%;
+	margin-bottom: 1%;
 }
 
 nav ul {
 	list-style-type: none;
-	margin: 0;
 	text-align: center;
 }
 
 nav li {
-	display: inline-block;
-	font-size: 2em;
-	
+	font-size: 1.5em;
+	font-family: 'Lato', sans-serif;
+	border-top: 1px solid #000;	
+}
+
+nav li:first-child {
+	border-top: none;
 }
 
 nav li a {
 	display: block;
 	color: #01361a;
-	text-align: center;
 	padding: 0.5em 1em;
 	text-decoration: none;
 }
 
-main {
-	clear: left;
-	background-color: #fff;
-	padding: 2%;
-	font-size: 1.75em;
+/*Show mobile class, hide tablet-desktop class*/
+.mobile {
+	display: block;
 }
 
-h1, h2 {
+.tablet-desktop {
+	display: none;
+}
+
+/*Style rules for main content*/
+main {
+	background-color: #fff;
+	padding: 2%;
+	font-size: 1.15em;
+	font-family: 'Bree Serif', serif;
+}
+.emphasis {
+	display: block;
+	text-align: center;
+	font-size: 1.5em;
+	color: #01361a;
+}
+
+.specialties {
+	display: block;
+	text-align: center;
+	color: #01361a;
+}
+
+h1, h2, h4 {
 	color: #01361a;
 }
 
@@ -56,15 +104,36 @@ h1, h2 {
 	place-items: center;
 }
 
-#contact {
-	text-align: center;
+.round {
+	border-radius: 8px;
 }
 
-#contact a {
+#contact {
+	text-align: center;
+	color: #000;
+	text-decoration: none;
+}
+
+#contact .tel-link {
 	color: #01361a;
 	text-decoration: none;
 }
 
+#contact .contact-email-link {
+	color: #01361a;
+	text-decoration: none;
+}
+.action {
+	color: #000;
+}
+
+.map {
+	border: 2px solid #000;
+	width: 95%;
+	height: 50%;
+}
+
+/*Style rules for footer content*/
 footer p {
 	font-size: 0.75em;
 	text-align: center;
