--- a/css/style.css
+++ b/css/style.css
@@ -169,7 +169,7 @@ footer p a {
 	nav li {
 		border-top: none;
 		display: inline-block;
-		border-right: 1px solid #000;
+		border-right: none;
 	}
 
 	nav li:nth-child(4) {
