--- a/css/style.css
+++ b/css/style.css
@@ -12,12 +12,16 @@ body, header, nav, main, footer, h1, div, img, h2, h4, grid, ul {
 }
 
 body {
-	background-color: #fff;
+	background-color: #507963;
 }
 
 img {
 	max-width: 100%;
 	display: block;
+}
+
+*{
+	box-sizing: border-box;
 }
 
 /*Style rules for mobile viewport*/
@@ -27,19 +31,20 @@ header {
 	position: -webkit-sticky;
 	position: sticky;
 	top: 0;
-	background-color: #fff;
-	height: 190px;
+	background-color: #507963;
+	height: 215px;
 }
 
 header img {
 	margin: 0 auto;
-	height: 190px;
+	height: 240px;
 }
 
 /*Style rules for navigation area*/
 nav {
 	padding: 1%;
 	margin-bottom: 1%;
+	background-color: #fff;
 }
 
 nav ul {
@@ -59,7 +64,7 @@ nav li:first-child {
 
 nav li a {
 	display: block;
-	color: #028a0f;
+	color: #507963;
 	padding: 0.5em 1em;
 	text-decoration: none;
 }
@@ -84,17 +89,17 @@ main {
 	display: block;
 	text-align: center;
 	font-size: 1.5em;
-	color: #028a0f;
+	color: #507963;
 }
 
 .specialties {
 	display: block;
 	text-align: center;
-	color: #028a0f;
+	color: #507963;
 }
 
 h1, h2, h4 {
-	color: #028a0f;
+	color: #507963;
 }
 
 .grid {
@@ -115,12 +120,12 @@ h1, h2, h4 {
 }
 
 #contact .tel-link {
-	color: #028a0f;
+	color: #507963;
 	text-decoration: none;
 }
 
 #contact .contact-email-link {
-	color: #028a0f;
+	color: #507963f;
 	text-decoration: none;
 }
 .action {
@@ -137,12 +142,12 @@ h1, h2, h4 {
 footer p {
 	font-size: 0.75em;
 	text-align: center;
-	color: #028a0f;
+	color: #000;
 	padding: 0 1em;
 }
 
 footer p a {
-	color: #028a0f;
+	color: #000;
 	text-decoration: none;
 }
 
@@ -186,7 +191,7 @@ footer p a {
 
 	/*Tablet Viewport: style rules for main content area */
 	main ul {
-		margin: 0 0 4% 10%
+		margin: 0 0 4% 10%;
 	}
 
 	.tel-num {
@@ -208,29 +213,24 @@ footer p a {
 		width: 25%;
 		float: left;
 		padding-bottom: 0;
-		height: 250px;
 	}
 	
-	header img {
-		height: 250px;
-	}
 	
 	/*Desktop Viewport: Style rules for nav area*/
 	nav {
 		float: right;
 		width: 70%;
 		margin: 4em 1em 0 0;
+		background-color: #507963;
 	}
 
 	nav ul {
-		list-style-type: none;
-		margin: 0;
+		
 		text-align: center;
 	}
 
 	nav li {
-		display: inline-block;
-		font-size: 2em;
+		font-size: 1.7em;
 		border: none;
 	}
 
@@ -239,11 +239,9 @@ footer p a {
 	}
 	
 	nav li a {
-		display: block;
-		color: #028a0f;
+		color: #000;
 		text-align: center;
 		padding: 0.5em 1em;
-		text-decoration: none;
 	}
 	
 	/*Desktop Viewport: Style Rules for main content*/
