--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ File Name: styles.css
 */
 
 /* CSS Reset */
-body, header, nav, main, footer, h1, div, img, h2, h4, grid, ul {
+body, header, nav, main, footer, h1, div, img, h2, h3, h4, grid, tile-grid, ul {
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -117,6 +117,11 @@ h1, h2, h4 {
 	text-align: center;
 }
 
+h3 {
+	color: #000;
+	text-align: center;
+}
+
 
 .round {
 	border-radius: 8px;
@@ -218,6 +223,14 @@ footer p a {
 		display: block;
 		padding: 0 10%;
 	}
+	
+	.tile-grid {
+		display: grid;
+		grid-template-columns: auto auto auto;
+		grid-gap: 20px;
+		place-items: center;
+		padding-top: 20px;
+	}
 }
 
 /*Media Query for Desktop viewport*/
@@ -264,6 +277,12 @@ footer p a {
 		clear: left;
 		font-size: 2em;
 	}
+	
+	.price-text {
+		font-size: .75em;
+	}
+	
+	
 	
 	.map {
 		border: 8px solid #000;
